# LSPosed

daemon/: proguard-rules.pro
daemon/src/main/java/org/lsposed/lspd/: Main.java
daemon/src/main/java/org/lsposed/lspd/service/: ConfigFileManager.java  ConfigManager.java  Dex2OatService.java  LSPSystemServerService.java  LSPosedService.java  LogcatService.java  PackageService.java  ServiceManager.java
daemon/src/main/jni/: dex2oat.cpp  logcat.cpp  logcat.h  logging.h  obfuscation.cpp
dex2oat/src/main/cpp/: CMakeLists.txt  dex2oat.c  logging.h
hiddenapi/stubs/src/main/java/android/os/: IServiceManager.java  SELinux.java
hiddenapi/stubs/src/main/java/com/android/internal/os/: BinderInternal.java
magisk-loader/: build.gradle.kts
magisk-loader/magisk_module/: customize.sh  daemon  post-fs-data.sh  util_functions.sh  verify.sh
magisk-loader/src/main/java/org/lsposed/lspd/util/: ParasiticManagerHooker.java
magisk-loader/src/main/jni/src/: service.cpp  service.h
services/daemon-service/src/main/java/org/lsposed/lspd/util/: Utils.java
